# live-doodle-on-cam

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.json  main.cpp  main_advanced.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: API.md  ARCHITECTURE.md  PERFORMANCE.md
src/: benchmark.cpp  performance_monitor.h
